--- a/src/features/bottle-filler/styles/bottle.scss
+++ b/src/features/bottle-filler/styles/bottle.scss
@@ -4,64 +4,68 @@ $tube-radius: 0px 0 20px 20px;
 $water-radius: 5px 5px 0px 0px;
 
 .grid {
-    display: grid;
+  display: grid;
 }
 .bottle-holder {
+  .bot-rel {
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
+    width: 100%;
+    height: 100%;
     .bottle {
-        width: 20%;
-        height: 75%;
-        border-radius: $tube-radius;
+      width: 20%;
+      height: 75%;
+      border-radius: $tube-radius;
+      display: flex;
+      justify-content: center;
+      .bottle-content {
+        width: 99%;
+        height: 100%;
         display: flex;
-        justify-content: center;
-        .bottle-content {
-            width: 99%;
-            height: 100%;
-            display: flex;
-            flex-direction: column-reverse;
-            .slice{
-                &:last-child{
-                    border-radius: $water-radius;
-                }
-                &:first-child{
-                    border-radius: $tube-radius;
-
-
-                }
-            }
+        flex-direction: column-reverse;
+        .slice {
+          &:last-child {
+            border-radius: $water-radius;
+          }
+          &:first-child {
+            border-radius: $tube-radius;
+          }
         }
-        background: linear-gradient(
-            90deg,
-            rgba(174, 208, 237, 0.3) 0%,
-            rgba(166, 204, 235, 0.3) 50%,
-            rgba(81, 168, 220, 0.3) 100%
-        );
-        border: 1px solid $glass-border;
+      }
+      background: linear-gradient(
+        90deg,
+        rgba(174, 208, 237, 0.3) 0%,
+        rgba(166, 204, 235, 0.3) 50%,
+        rgba(81, 168, 220, 0.3) 100%
+      );
+      border: 1px solid $glass-border;
 
-        &.active {
-            animation: bounce 1s infinite alternate;
-            -webkit-animation: bounce 1s infinite alternate;
-        }
+      &.active {
+        // animation: bounce 1s infinite alternate;
+        // -webkit-animation: bounce 1s infinite alternate;
+        position: absolute;
+        top: 30px;
+        left: 100px;
+      }
     }
+  }
 }
 
-
-
 @keyframes bounce {
-    from {
-      transform: translateY(0px);
-    }
-    to {
-      transform: translateY(-15px);
-    }
+  from {
+    transform: translateY(0px);
   }
-  @-webkit-keyframes bounce {
-    from {
-      transform: translateY(0px);
-    }
-    to {
-      transform: translateY(-15px);
-    }
+  to {
+    transform: translateY(-15px);
   }
+}
+@-webkit-keyframes bounce {
+  from {
+    transform: translateY(0px);
+  }
+  to {
+    transform: translateY(-15px);
+  }
+}
